--- a/style2.css
+++ b/style2.css
@@ -246,7 +246,7 @@ header .master_play img {
 }
 
 header .master_play h5 {
-   width: 130px;
+   width: 20px;
    /* border: 1px solid #fff; */
    margin-left: 15px;
    color: #fff;
@@ -288,5 +288,81 @@ header .master_play .icon .shuffle {
     align-items: center;
 }
 
+header .master_play .icon #download_music  {
+   font-size: 20px;
+   margin-left: 10px;
 
-/* REPRENDRE A 1:01:33 */
+}
+header .master_play .icon .bi:nth-child(3)  {
+    border: 1px solid rgb(105, 105, 105, .1);
+    border-radius: 50%;
+    padding: 1px 5px 0px 7px;
+    margin: 0px 5px;
+  }
+
+  header .master_play span{
+    color: #fff;
+    width: 32px;
+    /* border: 1px solid #fff; */
+    font-size: 11px;
+    font-weight: 400;
+  }
+ 
+  header .master_play #currentStart{
+    margin: 0px 0px 0px 20px;
+  }
+  
+  header .master_play .bar{
+    position: relative;
+    width: 43%;
+    height: 2px;
+    background: rgb(105, 105, 170, .1);
+    margin: 0px 15px 0px 10px;
+  }
+  
+  header .master_play .bar .bar2{
+    position: absolute;
+    background: #36e2ec;
+    width: 50%;
+    height: 100%;
+    top: 0;
+    transform: 1s linear;
+  }
+  
+  header .master_play .bar .dot{
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    background: #36e2ec;
+    border-radius: 50%;
+    left: 0%;
+    top:-1.5px;
+    transition: 1s linear;
+  }
+  
+  header .master_play .bar .dot::before{
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border: 1px solid #36e2ec;
+    border-radius: 50%;
+    left: -7px;
+    top: -6.5px;
+    box-shadow: inset 0px 0px 3px #36e2ec;
+
+  }
+  
+  header .master_play .bar input{
+    position: absolute;
+    width: 100%;
+    top: -7px;
+    left: 0;
+    cursor: pointer;
+    z-index: 99999999999999999999999999999999999999;
+    /* transition: 3s linear; */
+    opacity: 0;
+  }
+
+
+/* REPRENDRE A 1:17:15s */
