--- a/style2.css
+++ b/style2.css
@@ -743,8 +743,63 @@ header .song_side .popular_artists .h4 {
       height: 100%;
       border-radius: 50%;
     }
+
+
+    /* MENU BURGER */ 
+
+/*
+
+    .toggle
+{
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background: url(https://i.ibb.co/HrfVRcx/menu.png);
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: center;
+  cursor: pointer;
+}
+.toggle.active
+{
+  background: url(https://i.ibb.co/rt3HybH/close.png);
+  background-repeat: no-repeat;
+  background-size: 25px;
+  background-position: center;
+  cursor: pointer;
+}
+
+.menuBurger
+{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.menuBurger ul
+{
+  position: relative;
+}
+.menuBurger ul li
+{
+  list-style: none;
+}
+.menuBurger ul li a
+{
+  text-decoration: none;
+  font-size: 24px;
+  color: #111;
+}
+.menuBurger ul li a:hover
+{
+  color: #03a9f4; 
+}
  
     
-
+*/
     
     
